# sandbox-python

./: .env.template  .gitignore  Dockerfile  Makefile  README.md  compose.yml  function_app.py  pyproject.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: docker-release.yaml  ghcr-release.yaml
docs/: README.md
notebooks/: parse_pdf.ipynb
sandbox_python/llms/: core.py
sandbox_python/llms/chains/: core.py  generation.py
sandbox_python/llms/graphs/: core.py
sandbox_python/llms/models/: core.py
sandbox_python/llms/tools/: bing_search.py
sandbox_python/slms/: core.py
sandbox_python/streamlits/: main.py
sandbox_python/streamlits/pages/: 1_basic_chat.py  2_lang_graph.py  3_slm_apps.py
scripts/: llms_cli.py  pdf_cli.py  slms_cli.py
tests/: test_core.py
